# indoor_bot

./: CMakeLists.txt  README.md  index.md  package.xml
config/: indoor_bot_lidar_slam_2d_gazebo.lua
config/dwa_planner/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  dwa_local_planner_params.yaml
launch/: amcl_localization.launch  cartographer_slam_rrt_exploration.launch  cartographer_slam_teleop.launch
launch/exploration/: rrt_exploration.launch
launch/include/: amcl.launch  cartographer_slam.launch  gmapping_slam.launch  indoor_bot.launch  map_server.launch  rviz.launch  world.launch
launch/move_base/: localplanner_DWAPlannerROS.launch  static_transform_odom_to_map.launch
maps/: big_apartment.pgm  big_apartment.yaml
models/indoor_bot/: model.config  model.sdf
models/urdf/: indoor_bot.gazebo  indoor_bot.xacro
rviz/: indoor_bot.rviz  indoor_bot_dwa.rviz  indoor_bot_localization.rviz
scripts/: assigner.py  filter.py  frontier_opencv_detector.py  functions.py
tf_tree/: README.md  frames.gv
worlds/: cafe2.world  simple_world.world
